// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip matches the snapshot when selected=false 1`] = `
<KeyboardProvider>
  <View
    accessibilityLabel="Cardiology"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DDE5E1",
        "borderRadius": 30,
        "borderWidth": 2,
        "paddingHorizontal": 21,
        "paddingVertical": 12,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#14213D",
          "fontFamily": "Figtree_600SemiBold",
          "fontSize": 19,
          "fontWeight": "600",
        }
      }
    >
      Cardiology
    </Text>
  </View>
</KeyboardProvider>
`;

exports[`Chip matches the snapshot when selected=true 1`] = `
<KeyboardProvider>
  <View
    accessibilityLabel="Cardiology"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#14213D",
        "borderColor": "#14213D",
        "borderRadius": 30,
        "borderWidth": 2,
        "paddingHorizontal": 21,
        "paddingVertical": 12,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#FFFFFF",
          "fontFamily": "Figtree_600SemiBold",
          "fontSize": 19,
          "fontWeight": "600",
        }
      }
    >
      Cardiology
    </Text>
  </View>
</KeyboardProvider>
`;
